--- a/app/src/main/res/layout/item_recycler2.xml
+++ b/app/src/main/res/layout/item_recycler2.xml
@@ -50,7 +50,13 @@
         android:ellipsize="end"
         />
 
-
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hapus Data"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/deskripsiWayang"
+        android:id="@+id/btnHapus"/>
 
 
 
